--- a/index.html
+++ b/index.html
@@ -5,23 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="top">
         <h1>My Portfolio</h1>
         <nav>
             <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#about">about</a></li>
-                <li><a href="#work">work</a></li>
-                <li><a href="#resume">resume</a></li>
-                <li><a href="#contact">contact</a></li>
+                <li class="nav-links"><a href="#">home</a></li>
+                <li class="nav-links"><a href="#about">about</a></li>
+                <li class="nav-links"><a href="#work">work</a></li>
+                <li class="nav-links"><a href="#resume">resume</a></li>
+                <li class="nav-links"><a href="#contact">contact</a></li>
             </ul>
         </nav>
     </header>
     <hr>
     <main>
-        <h2>I am Abdelrahman Messelhy</h2>
+        <h2 class="test">I am Abdelrahman Messelhy</h2>
         <p>I am a web developer.</p>
         <img src="./male.jpeg" alt="abdelrahman's image">
         <figcaption>Abdelrahman's Image</figcaption>
